Index: frysk-core/frysk/debuginfo/ChangeLog 2007-08-20  Andrew Cagney  <cagney@redhat.com>
	* DebugInfoEvaluator.java: Replace call to
	EnumType.addMember(Type,String,long) with
	EnumType.addMember(String,long).  Pass the enum's size to the
	EnumType constructor.